--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install python-dotenv"
+    "# %pip install python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +102,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase'\n",
+    "\n",
+    "res = requests.get(url)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# res.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Obtain the full list of forks created from the main lab repo via Github API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 715102579,\n",
+       " 'node_id': 'R_kgDOKp-Zcw',\n",
+       " 'name': 'apuntes_clase',\n",
+       " 'full_name': 'mariasanzr/apuntes_clase',\n",
+       " 'private': False,\n",
+       " 'owner': {'login': 'mariasanzr',\n",
+       "  'id': 144820296,\n",
+       "  'node_id': 'U_kgDOCKHISA',\n",
+       "  'avatar_url': 'https://avatars.githubusercontent.com/u/144820296?v=4',\n",
+       "  'gravatar_id': '',\n",
+       "  'url': 'https://api.github.com/users/mariasanzr',\n",
+       "  'html_url': 'https://github.com/mariasanzr',\n",
+       "  'followers_url': 'https://api.github.com/users/mariasanzr/followers',\n",
+       "  'following_url': 'https://api.github.com/users/mariasanzr/following{/other_user}',\n",
+       "  'gists_url': 'https://api.github.com/users/mariasanzr/gists{/gist_id}',\n",
+       "  'starred_url': 'https://api.github.com/users/mariasanzr/starred{/owner}{/repo}',\n",
+       "  'subscriptions_url': 'https://api.github.com/users/mariasanzr/subscriptions',\n",
+       "  'organizations_url': 'https://api.github.com/users/mariasanzr/orgs',\n",
+       "  'repos_url': 'https://api.github.com/users/mariasanzr/repos',\n",
+       "  'events_url': 'https://api.github.com/users/mariasanzr/events{/privacy}',\n",
+       "  'received_events_url': 'https://api.github.com/users/mariasanzr/received_events',\n",
+       "  'type': 'User',\n",
+       "  'site_admin': False},\n",
+       " 'html_url': 'https://github.com/mariasanzr/apuntes_clase',\n",
+       " 'description': 'Apuntes de las clases diarias',\n",
+       " 'fork': True,\n",
+       " 'url': 'https://api.github.com/repos/mariasanzr/apuntes_clase',\n",
+       " 'forks_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/forks',\n",
+       " 'keys_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/keys{/key_id}',\n",
+       " 'collaborators_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/collaborators{/collaborator}',\n",
+       " 'teams_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/teams',\n",
+       " 'hooks_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/hooks',\n",
+       " 'issue_events_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/issues/events{/number}',\n",
+       " 'events_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/events',\n",
+       " 'assignees_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/assignees{/user}',\n",
+       " 'branches_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/branches{/branch}',\n",
+       " 'tags_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/tags',\n",
+       " 'blobs_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/git/blobs{/sha}',\n",
+       " 'git_tags_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/git/tags{/sha}',\n",
+       " 'git_refs_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/git/refs{/sha}',\n",
+       " 'trees_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/git/trees{/sha}',\n",
+       " 'statuses_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/statuses/{sha}',\n",
+       " 'languages_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/languages',\n",
+       " 'stargazers_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/stargazers',\n",
+       " 'contributors_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/contributors',\n",
+       " 'subscribers_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/subscribers',\n",
+       " 'subscription_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/subscription',\n",
+       " 'commits_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/commits{/sha}',\n",
+       " 'git_commits_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/git/commits{/sha}',\n",
+       " 'comments_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/comments{/number}',\n",
+       " 'issue_comment_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/issues/comments{/number}',\n",
+       " 'contents_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/contents/{+path}',\n",
+       " 'compare_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/compare/{base}...{head}',\n",
+       " 'merges_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/merges',\n",
+       " 'archive_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/{archive_format}{/ref}',\n",
+       " 'downloads_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/downloads',\n",
+       " 'issues_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/issues{/number}',\n",
+       " 'pulls_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/pulls{/number}',\n",
+       " 'milestones_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/milestones{/number}',\n",
+       " 'notifications_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/notifications{?since,all,participating}',\n",
+       " 'labels_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/labels{/name}',\n",
+       " 'releases_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/releases{/id}',\n",
+       " 'deployments_url': 'https://api.github.com/repos/mariasanzr/apuntes_clase/deployments',\n",
+       " 'created_at': '2023-11-06T13:37:55Z',\n",
+       " 'updated_at': '2023-11-06T13:37:55Z',\n",
+       " 'pushed_at': '2023-11-06T12:51:33Z',\n",
+       " 'git_url': 'git://github.com/mariasanzr/apuntes_clase.git',\n",
+       " 'ssh_url': 'git@github.com:mariasanzr/apuntes_clase.git',\n",
+       " 'clone_url': 'https://github.com/mariasanzr/apuntes_clase.git',\n",
+       " 'svn_url': 'https://github.com/mariasanzr/apuntes_clase',\n",
+       " 'homepage': 'https://github.com',\n",
+       " 'size': 868975,\n",
+       " 'stargazers_count': 0,\n",
+       " 'watchers_count': 0,\n",
+       " 'language': None,\n",
+       " 'has_issues': False,\n",
+       " 'has_projects': True,\n",
+       " 'has_downloads': True,\n",
+       " 'has_wiki': False,\n",
+       " 'has_pages': False,\n",
+       " 'has_discussions': False,\n",
+       " 'forks_count': 0,\n",
+       " 'mirror_url': None,\n",
+       " 'archived': False,\n",
+       " 'disabled': False,\n",
+       " 'open_issues_count': 0,\n",
+       " 'license': None,\n",
+       " 'allow_forking': True,\n",
+       " 'is_template': False,\n",
+       " 'web_commit_signoff_required': False,\n",
+       " 'topics': [],\n",
+       " 'visibility': 'public',\n",
+       " 'forks': 0,\n",
+       " 'open_issues': 0,\n",
+       " 'watchers': 0,\n",
+       " 'default_branch': 'main'}"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forks_url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase/forks'\n",
+    "\n",
+    "forks = requests.get(forks_url)\n",
+    "\n",
+    "forks.json()[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Loop the JSON response to find out the language attribute of each fork. Use an array to store the language attributes of each fork.\n",
+    "3. Print the language array. It should be something like:\n",
+    "\n",
+    "Hint: Each language should appear only once in your array.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, 'Jupyter Notebook']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp=[]\n",
+    "\n",
+    "for f in forks.json():\n",
+    "    \n",
+    "    if f['language'] not in temp:\n",
+    "\n",
+    "        temp.append(f['language'])\n",
+    "\n",
+    "\n",
+    "temp\n"
+   ]
   }
  ],
  "metadata": {
@@ -124,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
