--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -35,22 +35,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "toxic-trading",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code"
+    "import json\n",
+    "import requests\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "github = os.getenv(\"token\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "static-stopping",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: print(variable[:10]) "
+    "with open('../token.txt') as file:\n",
+    "    my_token = file.read()\n",
+    "HEADER = {'Authorization': 'token ' + my_token }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "toxic-trading",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code\n",
+    "url = 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents?extension:scavengerhunt'\n",
+    "\n",
+    "res = requests.get(url, headers = HEADER)\n",
+    "\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_url = new_res.json()[0]['download_url']\n",
+    "\n",
+    "res2 = requests.get(download_url, headers = HEADER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'of\\n'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res2.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp =[]\n",
+    "\n",
+    "for i in range(1, len(res.json())):\n",
+    "\n",
+    "    res2 = requests.get(res.json()[i]['url'], headers = HEADER)\n",
+    "    \n",
+    "    for j in res2.json():\n",
+    "\n",
+    "        if('scavengerhunt' in j['name']):\n",
+    "            temp.append(j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://raw.githubusercontent.com/ironhack-datalabs/scavenger/master/98750/.0001.scavengerhunt'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_ordenada = sorted(temp, key=lambda x: x['name'])\n",
+    "\n",
+    "lista_ordenada[0]['download_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp2 =[]\n",
+    "\n",
+    "for i in lista_ordenada:\n",
+    "\n",
+    "    file = requests.get(i['download_url'], headers = HEADER)\n",
+    "    \n",
+    "    temp2.append(file.text.strip())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'In data science, 80 percent of time spent is preparing data, 20 percent of time is spent complaining about the need to prepare data.'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(temp2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y lo hice sin ver el ejemplo de Yona!"
    ]
   }
  ],
@@ -70,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
