--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -24,22 +24,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "#Your code\n",
+    "\n",
+    "import json\n",
+    "import requests as req"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "creative-stable",
+   "execution_count": 4,
+   "id": "8d531894",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: print(variable[:10]) "
+    "url =  'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase/commits?since=2023-10-28'\n",
+    "\n",
+    "res = req.get(url).json()\n",
+    "\n",
+    "res[0]['commit']['author']['date']\n",
+    "\n",
+    "commits = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e2835c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in res:\n",
+    "    if c['commit']['author']['date'] > '2023-10-28':\n",
+    "        commits.append(c)\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "creative-stable",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example: print(variable[:10]) \n",
+    "len(commits)"
    ]
   },
   {
@@ -67,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
