--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-dotenv in /Users/mariasanz/anaconda3/lib/python3.11/site-packages (1.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#pip install python-dotenv"
+    "%pip install python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +111,254 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests as req\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://api.github.com/repos/ironhack-datalabs/datamad1020-rev'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [403]>"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = req.get(url)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['message', 'documentation_url'])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'forks_url'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m url_fork \u001b[39m=\u001b[39m res\u001b[39m.\u001b[39mjson()[\u001b[39m'\u001b[39m\u001b[39mforks_url\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'forks_url'"
+     ]
+    }
+   ],
+   "source": [
+    "url_fork = res.json()['forks_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forks = req.get(url_fork)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(forks.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m forks\u001b[39m.\u001b[39mjson()[\u001b[39m0\u001b[39m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "forks.json()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb Cell 18\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m forks\u001b[39m.\u001b[39mjson()[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mkeys()\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "forks.json()[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m lang \u001b[39m=\u001b[39m forks\u001b[39m.\u001b[39mjson()[\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mlanguages_url\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X36sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m lang\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "lang = forks.json()[0]['languages_url']\n",
+    "lang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': \"API rate limit exceeded for 2.136.118.161. (But here's the good news: Authenticated requests get a higher rate limit. Check out the documentation for more details.)\",\n",
+       " 'documentation_url': 'https://docs.github.com/rest/overview/resources-in-the-rest-api#rate-limiting'}"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "req.get(lang).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb Cell 22\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X40sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m lst \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X40sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m fork \u001b[39min\u001b[39;00m forks\u001b[39m.\u001b[39mjson():\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X40sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     lang \u001b[39m=\u001b[39m fork[\u001b[39m'\u001b[39m\u001b[39mlanguages_url\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X40sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     lang1 \u001b[39m=\u001b[39m req\u001b[39m.\u001b[39mget(lang)\u001b[39m.\u001b[39mjson()\u001b[39m.\u001b[39mkeys()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mariasanz/Desktop/Ironhack/4.1-lab_api_scavengers_game/your-code/challenge-1.ipynb#X40sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     lst\u001b[39m.\u001b[39mappend(lang1)\n",
+      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "lst = []\n",
+    "\n",
+    "for fork in forks.json():\n",
+    "    lang = fork['languages_url']\n",
+    "    lang1 = req.get(lang).json().keys()\n",
+    "    lst.append(lang1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -124,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
