--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -232,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "<Response [403]>"
+       "<Response [200]>"
       ]
      },
      "execution_count": 7,
@@ -241,7 +241,8 @@
     }
    ],
    "source": [
-    "commits_url='https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/commits'\n",
+    "commits_url='https://api.github.com/repos/Ankourii/1.1-lab_bash/commits'\n",
+    "\n",
     "\n",
     "resp = req.get(commits_url)\n",
     "resp\n"
@@ -259,8 +260,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ece9dc0d",
+   "execution_count": 23,
+   "id": "02b70f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this is using dates\n",
+    "\n",
+    "for link in commit_links:\n",
+    "    link=link.replace('{/sha}','')\n",
+    "    resp = req.get(link, headers=HEADER)\n",
+    "    commits=resp.json()\n",
+    "    commits_per_lab = []\n",
+    "    for commit in commits:\n",
+    "        if '2023-10-29' < commit['commit']['author']['date'] > '2023-10-23':\n",
+    "            commits_per_lab.append(commit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b87972bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(commits_per_lab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d93c3ae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,24 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "36fdde08",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'commit_per_lab' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m commit_per_lab\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m link \u001b[38;5;129;01min\u001b[39;00m commit_links_week_3:\n\u001b[0;32m      3\u001b[0m     link\u001b[38;5;241m=\u001b[39mlink\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m/sha}\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'commit_per_lab' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "commit_per_lab=\n",
+    "#this is using the labs that were given for week 3. \n",
+    "commit_per_lab=[]\n",
+    "lab_commit_count=0\n",
     "for link in commit_links_week_3:\n",
     "    link=link.replace('{/sha}','')\n",
     "    resp = req.get(link, headers=HEADER)\n",
@@ -299,17 +330,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "327ab410",
+   "execution_count": 18,
+   "id": "e2a03ac1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14, 15, 16, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "commit_per_lab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "58e8b2f3",
    "metadata": {},
    "outputs": [],
@@ -319,10 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1ca7bb4",
+   "execution_count": 20,
+   "id": "9857f5ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "total_commits"
    ]
