--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -32,146 +32,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Your code\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import re\n",
+    "load_dotenv()\n",
+    "import json\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests as req\n",
-    "\n",
-    "repository = \"Ironhack-Data-Madrid-Octubre-2023/3.1-lab_intro_to_mysql\"\n",
-    "api_url = f\"https://api.github.com/repos/{repository}\"\n",
-    "commit_count = 0  # Initialize the total commit count\n",
-    "\n",
-    "with open('../pat.txt', 'r') as file:\n",
-    "    pat = file.read().strip()  # Strip any leading/trailing whitespace\n",
-    "\n",
-    "HEADER = {'Authorization': 'token ' + pat}"
+    "commits = \"/repos/Ironhack-Data-Madrid-Agosto-2022/Apuntes-de-clase/commits\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "e9d18de4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res = req.get(api_url, headers=HEADER) \n",
-    "res"
+    "def requestGithub (endpoint):\n",
+    "    \n",
+    "    token = os.getenv(\"GITHUB_APIKEY\")\n",
+    "\n",
+    "    with open('../token.txt', 'r') as f:\n",
+    "        token = f.read()\n",
+    "\n",
+    "    if not token:\n",
+    "        raise ValueError (\"You need a token\")\n",
+    "    direccion=\"https://api.github.com\"\n",
+    "    url = direccion+endpoint\n",
+    "\n",
+    "    print(f\"Requesting {url}\")\n",
+    "    headers = {\n",
+    "        \"Authorization\": f\"token {token}\"}\n",
+    "\n",
+    "    res = requests.get(url, headers=headers)\n",
+    "    return res.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "f7d87893",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url', 'created_at', 'updated_at', 'pushed_at', 'git_url', 'ssh_url', 'clone_url', 'svn_url', 'homepage', 'size', 'stargazers_count', 'watchers_count', 'language', 'has_issues', 'has_projects', 'has_downloads', 'has_wiki', 'has_pages', 'has_discussions', 'forks_count', 'mirror_url', 'archived', 'disabled', 'open_issues_count', 'license', 'allow_forking', 'is_template', 'web_commit_signoff_required', 'topics', 'visibility', 'forks', 'open_issues', 'watchers', 'default_branch', 'permissions', 'temp_clone_token', 'organization', 'network_count', 'subscribers_count'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resp = res.json()\n",
-    "res.json().keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2e8e0598",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res = req.get(resp[\"forks_url\"], headers=HEADER) # Access forks_url\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "01535328",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "forks = res.json()\n",
-    "len(forks) # This would be the amount of forks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6ccf95a8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is a total 100 commits in the forks of the repo: Ironhack-Data-Madrid-Octubre-2023/3.1-lab_intro_to_mysql\n"
+      "Haciendo request a https://api.github.com/repos/Ironhack-Data-Madrid-Agosto-2022/Apuntes-de-clase/commits\n"
      ]
     }
    ],
    "source": [
-    "commits = 0 # Initialize a counter\n",
+    "com = requestGithub(commits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2e8e0598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-09-27T07:57:47Z'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "com[0]['commit']['author']['date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "01535328",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30,\n",
+       " ['2022-09-27T07:57:47Z',\n",
+       "  '2022-09-27T07:11:56Z',\n",
+       "  '2022-09-26T09:33:52Z',\n",
+       "  '2022-09-26T06:53:34Z',\n",
+       "  '2022-09-23T09:38:28Z',\n",
+       "  '2022-09-23T08:42:40Z',\n",
+       "  '2022-09-23T07:08:24Z',\n",
+       "  '2022-09-22T10:21:18Z',\n",
+       "  '2022-09-22T09:53:11Z',\n",
+       "  '2022-09-22T09:48:45Z',\n",
+       "  '2022-09-22T08:59:51Z',\n",
+       "  '2022-09-22T07:53:33Z',\n",
+       "  '2022-09-21T10:04:32Z',\n",
+       "  '2022-09-21T08:35:22Z',\n",
+       "  '2022-09-21T07:50:43Z',\n",
+       "  '2022-09-20T11:46:56Z',\n",
+       "  '2022-09-20T10:22:58Z',\n",
+       "  '2022-09-20T08:01:27Z',\n",
+       "  '2022-09-19T11:42:33Z',\n",
+       "  '2022-09-19T11:00:54Z',\n",
+       "  '2022-09-19T09:14:26Z',\n",
+       "  '2022-09-19T07:47:33Z',\n",
+       "  '2022-09-15T10:38:37Z',\n",
+       "  '2022-09-15T09:06:21Z',\n",
+       "  '2022-09-15T08:03:09Z',\n",
+       "  '2022-09-15T07:09:36Z',\n",
+       "  '2022-09-14T08:51:17Z',\n",
+       "  '2022-09-14T07:54:57Z',\n",
+       "  '2022-09-13T10:12:15Z',\n",
+       "  '2022-09-13T08:44:42Z'])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_com = 0\n",
+    "com_lst = []\n",
+    "for i in range(len(com)):\n",
+    "    if com[i]['commit']['author']['date'] > '2022-08-22T00:00:00Z':\n",
+    "        com_lst.append(com[i]['commit']['author']['date'])\n",
+    "        num_com += 1\n",
     "\n",
-    "for i in range(len(forks)):\n",
-    "\n",
-    "    url_e = forks[i][\"events_url\"]\n",
-    "    ans = req.get(url_e, headers=HEADER).json()\n",
-    "\n",
-    "    for i in range(len(ans)): # Iterate through all the forks      \n",
-    "        if \"commits\" in ans[i][\"payload\"].keys():\n",
-    "            commits +=1\n",
-    "\n",
-    "print(f\"There is a total {commits} commits in the forks of the repo: {repository}\")"
+    "num_com, com_lst"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "clase",
    "language": "python",
-   "name": "python3"
+   "name": "clase"
   },
   "language_info": {
    "codemirror_mode": {
@@ -183,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
